--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,18 @@
+sudo: false
+
 language: python
+
+python:
+  - 2.7
+
+install:
+  - pip install codecov
+
+script:
+  - coverage run tests.py
+
+after_success:
+  - codecov
 
 deploy:
   provider: s3
